# ChangeLog for dev-perl/Audio-CD-disc-cover
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Audio-CD-disc-cover/ChangeLog,v 1.14 2005/05/25 14:08:12 mcummings Exp $

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  Audio-CD-disc-cover-0.05.ebuild:
  dev-perl/MIME-Base64 => perl-core/MIME-Base64 migration

  24 May 2005; Michael Cummings <mcummings@gentoo.org>
  Audio-CD-disc-cover-0.05.ebuild:
  dev-perl/Digest-MD5 => perl-core/Digest-MD5

  07 Jun 2003; <rac@gentoo.org> Audio-CD-disc-cover-0.05.ebuild:
  Add IUSE

*Audio-CD-disc-cover-0.05 (07 May 2003)

  07 May 2003; <rac@gentoo.org> Audio-CD-disc-cover-0.04-r1.ebuild,
  Audio-CD-disc-cover-0.04-r1.ebuild, Audio-CD-disc-cover-0.04.ebuild,
  Audio-CD-disc-cover-0.04.ebuild, Audio-CD-disc-cover-0.05.ebuild:
  Version bump, cleanout, and upstream distfiles source move. Thanks to Felix
  Kurth <felix@fkurth.de> in bug #12908.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*Audio-CD-disc-cover-0.04 (18 Jun 2002)

  20 Sep 2002; Mike Frysinger <vapier@gentoo.org> :
  Old HOMEPAGE has moved ...

  30 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> Audio-CD-disc-cover-0.04.ebuild:

  Added ppc to KEYWORDS. Added RDEPEND.

  18 Jun 2002; Arcady Genkin <agenkin@thpoon.com>
	Audio-CD-disc-cover-0.04.ebuild:

  Initial version by Felix Kurth <felix@fkurth.de>.